# marketing_agent

./: .gitignore  README.md  app.py  langgraph.json  main.py  pyproject.toml
output/: about.html  contact.html  index.html  products.html  script.js  style.css  styles.css
prompts/media_posts/: platform_prompts.json  system_prompt_template.txt
web_developer_agent/: agent.py
