[project]
name = "crm-boat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.95.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.6",
    "langgraph-cli[inmem]>=0.4.21",
    "pandas>=3.0.2",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
